# 040-higher-order-transformers

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
rust_hot_crypto/: Cargo.toml  README.md
rust_hot_crypto/examples/: attention_demo.rs  backtest.rs  fetch_data.rs  predict_movement.rs
rust_hot_crypto/src/: lib.rs  main.rs
rust_hot_crypto/src/attention/: higher_order.rs  kernel.rs  mod.rs  standard.rs
rust_hot_crypto/src/model/: mod.rs  predictor.rs  transformer.rs
rust_hot_crypto/src/strategy/: mod.rs  signals.rs
rust_hot_crypto/src/tensor/: decomposition.rs  mod.rs  operations.rs  tensor3d.rs
rust_hot_crypto/src/utils/: config.rs  mod.rs
